# llm-routers

./: .gitignore  AGENTS.md  CLAUDE.md  FINDINGS.md  README.md  run_tests.py
.githooks/: pre-commit
bench/: judge.py  models.json  report.py  run.py
bench/prompts/: tasks.json
bench/results/: _judge.jsonl  claude-haiku-4-5.jsonl  claude-opus-4-7.jsonl  claude-sonnet-4-6.jsonl  groq-kimi-k2.jsonl  (+38 more)
claude-agent-server/: .env.example  LICENSE  README.md  cache.py  install_task.ps1  server.py  start.bat  test_cache.py  test_server.py
claude-code-router/: README.md  config.example.json  custom_router.js
codex-agent-server/: .env.example  LICENSE  README.md  install_task.ps1  integration_suite.py  server.py  start.bat  test_server.py
mcp-council/: README.md  circuit_breaker.py  council.py  event_log.py  healthcheck.py  logger.py  models.py  openai_client.py  prompts.py  pyproject.toml  sandbox.py  server.py  single_call.py  state.py  tail_events.py  web_search.py  web_search_tool.py
mcp-council/dialogue/: debate.py  engine.py  panel.py  prompts.py  render.py  socratic.py  state.py
mcp-council/tests/: conftest.py  test_circuit_breaker.py  test_council.py  test_event_log.py  test_healthcheck.py  test_logger.py  test_models.py  test_openai_client.py  test_sandbox.py  test_search_cache.py  test_server.py  test_single_call.py  test_state.py  test_tail_events.py  test_web_search.py
mcp-council/tests/dialogue/: conftest.py  test_debate.py  test_dialogue_state.py  test_engine.py  test_panel.py  test_prompts.py  test_render.py  test_server_dialogue.py  test_socratic.py
