[project]
name = "mcp-council"
version = "0.1.0"
description = "MCP server: Karpathy 3-stage council of 6 LLMs (GLM/Kimi/DeepSeek/Qwen/MiniMax/Gemini). Returns materials for synthesis by main agent."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
